<resources>
    <string name="app_name">My Application</string>
    <string name="search">Search</string>
    <string name="entry">entry</string>
    <string name="clear_query_history">clear query history</string>
    <string name="query_history">query history</string>
    <string name="quried">quried</string>
    <string name="once">once</string>
    <string name="twice">twice</string>
    <string name="clear_local_htmls">clear local htmls</string>
    <string name="delete_last_query">delete last query</string>
    <string name="dictionary_inventory">dictionary inventory</string>
    <string name="view_mode">view mode</string>
    <string name="by_query_frequency">by query frequency</string>
    <string name="download_from_server">download from server</string>
    <string name="create_backup">create backup</string>
    <string name="deploy_backup">deploy backup</string>
</resources>