<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionLayout="@layout/action_view"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/clear_query_history"
        android:title="@string/clear_query_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_local_htmls"
        android:title="@string/clear_local_htmls"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_last_query"
        android:title="@string/delete_last_query"
        app:showAsAction="never" />
</menu>